release_exports/v5/import_bundle_report.md
# Import Bundle Build Report

- Generated at: `2026-03-29T17:42:58+08:00`
- Output CSV: `D:\workspace\lab-safe-assistant-github\artifacts\import_bundle_v5\knowledge_base_import_ready.csv`
- Total merged rows: `324`
- Empty IDs skipped: `0`

## Source Merge Summary (Priority Order)

| source | input_rows | selected_rows | duplicate_skips |
|---|---:|---:|---:|
| curated | 81 | 81 | 0 |
| v5_web | 18 | 18 | 0 |
| v4_2_release | 306 | 225 | 81 |

## Distribution Summary

### category

| key | count |
|---|---:|
| 设备安全 | 52 |
| 化学 | 51 |
| 检测方法 | 38 |
| 实验室管理 | 29 |
| 实验室设备安全 | 29 |
| 通用 | 29 |
| 制度 | 17 |
| 标准 | 15 |
| 实验设备 | 12 |
| 生物 | 11 |
| 电气安全 | 11 |
| 危化品 | 7 |
| 电气 | 6 |
| 危险源管理 | 5 |
| 专项安全 | 4 |
| 培训 | 4 |
| SDS | 2 |
| 辐射 | 2 |

### source_type

| key | count |
|---|---:|
| PDF | 177 |
| 网页 | 102 |
| 制度 | 16 |
| SOP | 11 |
| MSDS | 8 |
| 应急预案 | 8 |
| SDS指南 | 1 |
| 政策 | 1 |

### language

| key | count |
|---|---:|
| zh-CN | 306 |
| en-US | 10 |
| en | 8 |

### risk_level

| key | count |
|---|---:|
| 3 | 140 |
| 4 | 138 |
| 2 | 22 |
| 5 | 22 |
| 1 | 2 |
